# gitgather

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gitgather/: __main__.py  gather.py
tests/: test_gitgather.py
